// Demeter Database Schema Diagram
// Generado a partir de SQLAlchemy models.py

Table users {
  id uuid [pk, default: `uuid.uuid4()`, note: 'Clave Primaria']
  username varchar [unique, not null, note: 'Nombre de usuario']
  password_hash varchar [not null, note: 'Hash bcrypt']
  role varchar [default: 'user', note: 'Rol del usuario (admin, user)']
  is_active boolean [default: true]
}

Table experiments {
  id integer [pk, increment]
  name varchar [not null]
  description varchar [note: 'Opcional']
  created_at datetime [default: `now()`]
  user_id uuid [ref: > users.id, note: 'Owner of the experiment']
  api_key varchar [unique, note: 'Clave API para el SDK de Python']
}

Table plants {
  id integer [pk, increment, note: 'ID de la Planta/Nodo']
  name varchar [not null, note: 'Nombre o Alias de la Planta']
  experiment_id integer [ref: > experiments.id, note: 'FK a experiments']
  node_id integer [unique, not null, note: 'Physical Node Address (e.g. ESP32)']
}

Table devices {
  id integer [pk, increment]
  name varchar [not null]
  device_type varchar [not null, note: 'pump, valve']
  gpio_pin integer [not null]
}

Table sequences {
  id integer [pk, increment]
  name varchar [not null]
  created_by uuid [ref: > users.id]
  created_at datetime [default: `now()`]
}

Table sequence_steps {
  id integer [pk, increment]
  sequence_id integer [not null, ref: > sequences.id]
  device_id integer [not null, ref: > devices.id]
  step_order integer [not null]
  target_state boolean [not null]
  duration_seconds integer [not null]
}

Table activity_log {
  id integer [pk, increment]
  timestamp datetime [default: `now()`]
  user_id uuid [ref: > users.id]
  device_id integer [ref: > devices.id]
  action_type varchar [not null]
  description text
}

// ── Telemetry Tables ────────────────────────────────────────────────────────

Table telemetry_th {
  id integer [pk, increment]
  timestamp datetime [not null, note: 'Fecha y hora de la medición']
  node_id integer [not null, note: 'Referencia a Node/Plant address']
  temperature float [not null, note: 'Temp en grados Celsius']
  humidity float [not null, note: 'HR en porcentaje']
}

Table pin_history {
  id integer [pk, increment]
  timestamp datetime [not null]
  node_id integer [not null]
  pin integer [not null]
  state boolean [not null]
}

Table system_history {
  id integer [pk, increment]
  timestamp datetime [not null]
  node_id integer [not null]
  mode integer [not null]
  battery_mv integer [not null]
}
